<resources>
    <string name="app_name">VampiMaestro</string>

    <string name="failure_no_internet">Theres is no internet connection</string>
    <string name="failure_db">We could not connect to the database</string>
    <string name="failure_unauthorized">You are no logged in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- COMUNES -->
    <string name="title_login">Vampi Escuela</string>
    <string name="hint_matricula">Matricula</string>
    <string name="hint_contrasena">Contraseña</string>
    <string name="btn_login">Iniciar Sesión</string>
    <string name="title_menu">Menú Principal</string>
    <string name="btn_menu_materias">Materias</string>
    <string name="btn_menu_perfil">Perfíl</string>
    <string name="btn_menu_logout">Cerrar Sesión</string>
    <string name="copyright">© Hermanas Vampiro Inc.</string>
    <string name="nombre">Vampi nombre</string>
    <string name="ap1">Vampi apellido paterno</string>
    <string name="ap2">Vampi apellido materno</string>
    <string name="correo">Vampi correo</string>
    <string name="calificaciones">Calificaciones</string>
    <string name="parcial_1">Parcial 1</string>
    <string name="parcial_3">Parcial 3</string>
    <string name="parcial_2">Parcial 2</string>
    <string name="c_default">0.0</string>
    <string name="materias">Materias</string>

</resources>